<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aquasafe.activities.SumActivity">

    <EditText
        android:id="@+id/moduleSN"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/module_s_n"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:visibility="visible"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="54dp" />

    <EditText
        android:id="@+id/startDate"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/start_date_optional"
        android:inputType="date"
        android:visibility="visible"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@+id/moduleSN"
        tools:layout_editor_absoluteX="84dp" />

    <EditText
        android:id="@+id/endDate"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/end_date_optional"
        android:inputType="date"
        android:visibility="visible"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@+id/startDate"
        tools:layout_editor_absoluteX="84dp" />

    <Button
        android:id="@+id/fetchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fetch"
        app:layout_constraintTop_toBottomOf="@+id/endDate"
        tools:layout_editor_absoluteX="84dp" />

    <Button
        android:id="@+id/selStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_short"
        app:layout_constraintLeft_toRightOf="@+id/startDate"
        app:layout_constraintTop_toTopOf="@+id/startDate" />

    <Button
        android:id="@+id/selEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_short"
        app:layout_constraintLeft_toRightOf="@+id/endDate"
        app:layout_constraintTop_toTopOf="@+id/endDate" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="376dp"
        tools:layout_editor_absoluteY="547dp" />

    <EditText
        android:id="@+id/sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/fetchBtn"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="356dp" />
</android.support.constraint.ConstraintLayout>