<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="horizontal"
    android:padding="3dip">

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/save"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="50dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:id="@+id/top_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingEnd="3dip"
            android:paddingStart="3dip"
            android:text="@string/configure_the_meter"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/meter_sn_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sn_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:labelFor="@+id/sn_edit"
                android:paddingEnd="3dip"
                android:paddingStart="3dip"
                android:text="@string/serial_number"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/sn_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:imeOptions="actionDone"
                android:digits="0123456789abcdefABCDEF"
                android:inputType="text"
                android:lines="1"
                android:maxLength="8"
                android:maxLines="1"
                android:paddingEnd="10dip"
                android:paddingStart="10dip"
                android:scrollHorizontally="true"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/meter_units_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/units_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:labelFor="@+id/sn_edit"
                android:paddingEnd="3dip"
                android:paddingStart="3dip"
                android:text="@string/meter_units"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/units_edit"
                android:layout_width="fill_parent"
                android:entries="@array/meter_units"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/unit_price_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/unit_price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:labelFor="@+id/sn_edit"
                android:paddingEnd="3dip"
                android:paddingStart="3dip"
                android:text="@string/unit_price"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/unit_price_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:lines="1"
                android:maxLength="16"
                android:maxLines="1"
                android:paddingEnd="10dip"
                android:paddingStart="10dip"
                android:scrollHorizontally="true"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/first_week_day_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/first_week_day_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:labelFor="@+id/sn_edit"
                android:paddingEnd="3dip"
                android:paddingStart="3dip"
                android:text="@string/first_week_day"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/first_week_day_edit"
                android:layout_width="fill_parent"
                android:entries="@array/dow_arrays"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bac_dim_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C0000000"
        android:visibility="gone">

        <pl.droidsonroids.gif.GifTextView
            android:id="@+id/progress_bar_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/loading"
            android:visibility="visible" />

    </RelativeLayout>
</RelativeLayout>